# algorithms

AlgorithmOfJarvis/: AlgosOfJarvis.cpp  CMakeLists.txt  README.md
BMHAlgos/: BMHalgos.cpp  CMakeLists.txt
Brackets/: CMakeLists.txt  skobki.cpp
Calculate/: CMakeLists.txt  Calculate.cpp
CombSort/: CMakeLists.txt  CombSort.cpp
ExternalSort/: CMakeLists.txt  ExternalSort.cpp
Hash/: CMakeLists.txt  Hash.cpp
HeapSort/: CMakeLists.txt  HeapSort.cpp
InsertionSort/: CMakeLists.txt  InsertionSort.cpp
MergeSort/: CMakeLists.txt  MergeSort.cpp
NestedTriangles/: CMakeLists.txt  NestedTriangles.cpp
PrimeNums/: CMakeLists.txt  prime_nums.cpp
QuickSort/: CMakeLists.txt  QuickSort.cpp
RabinAlgos/: CMakeLists.txt  Rabin'sAlgos.cpp
RadixSort/: CMakeLists.txt  radix_sort.cpp
SelectionSort/: CMakeLists.txt  SelectionSort.cpp
ShellSort/: CMakeLists.txt  Shell_sort.cpp
TreeFirst/: TreeFirst.py
TreeSecThir/: TreeSecThir.py
